# snake-in-cpp

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
include/: score.h  snake.h
src/: main.cpp  score.cpp  snake.cpp
